--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="utf-8">
     <title>我的github主页</title>
+    <link rel="icon" href="images/html5.ico">
     <style>
         *{margin: 0; padding: 0;}
         h1{margin-top: 20px; font-size: 24px; color: #333; text-align: center;}
