--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
     <style>
         *{margin: 0; padding: 0;}
         h1{margin-top: 20px; font-size: 24px; color: #333; text-align: center;}
+        h2{margin-top: 20px; font-size: 24px; color: #000; text-align: center;}
     </style>
 </head>
 <body>
     <h1>hello,world!</h1>
+    <h2>github.com</h2>
 </body>
 </html>
