--- a/index.html
+++ b/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>我的github主页</title>
-    <link rel="icon" href="images/html5.ico">
-    <style>
-        *{margin: 0; padding: 0;}
-        h1{margin-top: 20px; font-size: 24px; color: #333; text-align: center;}
-    </style>
+<meta charset="utf-8">
+<meta name="renderer" content="webkit">
+<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+<title>我的github主页</title>
+<link rel="icon" href="images/html5.ico">
+<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-    <h1>hello,world!</h1>
+
 </body>
 </html>
