--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
+    <div class="bg_left"></div>
+    <div class="bg_right"></div>
+    <div class="container">
 
-
+    </div>
 </body>
 </html>
