--- a/index.html
+++ b/index.html
@@ -1,18 +1,153 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<meta charset="utf-8">
-<meta name="renderer" content="webkit">
-<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-<title>我的github主页</title>
-<link rel="icon" href="images/html5.ico">
-<link rel="stylesheet" href="css/main.css">
+	<meta charset="UTF-8">
+	<meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
+	<title>forever love</title>
 </head>
-<body>
-    <div class="bg_left"></div>
-    <div class="bg_right"></div>
-    <div class="container">
+<script src="http://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<style type="text/css">
+	*{ -webkit-tap-highlight-color:rgba(0,0,0,0); -webkit-box-sizing: border-box; box-sizing: border-box; }
+	html{ width: 100%; height: 100%; }
+	body{ margin: 0; background: #326a7e; color: #f0f0f0;}
+	.content{ margin-bottom: 50px; padding-left: 15px; padding-right: 15px;}
+	.hide{ display: none !important; }
+	p{ margin: 0; }
+	.btn-groups{ padding-right: 20px; text-align: center; }
+	.heart-btn{ display: inline-block; animation: breath 0.8s linear 0s infinite both; -webkit-animation: breath 0.8s linear 0s infinite both; }
+	.btn{ position: relative; display: inline-block; width: 60px; height: 60px; margin: 0 30px; transform: rotate(45deg); -webkit-transform: rotate(45deg);}
+	.btn span{ display: block; width: 100%; height: 100%; line-height: 60px; margin-top: -10px; margin-left: -10px; text-align: center; transform: rotate(-45deg); -webkit-transform: rotate(-45deg); }
+	.btn-a{ background: #d26ae5; }
+	.btn-b{ background: #c9c9c9; }
+	.btn-a:before{ content: ''; position: absolute; display: block; width: 30px; height: 60px; background: #d26ae5; left: -29px; top: 0; border-top-left-radius: 60px; border-bottom-left-radius: 60px; }
+	.btn-a:after{ content: ''; position: absolute; display: block; width: 60px; height: 30px; background: #d26ae5; left: 0; top: -29px; border-top-left-radius: 60px; border-top-right-radius: 60px;}
+	.btn-b:before{ content: ''; position: absolute; display: block; width: 30px; height: 60px; background: #c9c9c9; left: -29px; top: 0; border-top-left-radius: 60px; border-bottom-left-radius: 60px; }
+	.btn-b:after{ content: ''; position: absolute; display: block; width: 60px; height: 30px; background: #c9c9c9; left: 0; top: -29px; border-top-left-radius: 60px; border-top-right-radius: 60px;}
+	.container{  }
+	.container .mask{ position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0,0,0,0.3); }
+	.container .modal{ width: 80%; height: 160px; position: absolute; top: 50%; left: 50%; padding: 20px 15px; border-radius: 5px; transform: translate(-50%, -70%); -webkit-transform: translate(-50%，-70%); background: #f3f3f3;}
+	.container .modal p{ margin-top: 20px; margin-bottom: 20px; font-size: 16px; color: #353535; text-align: center;}
+	.confirm{ display: block; width: 120px; height: 40px; margin: 0 auto; border: none; font-size: 16px; border-radius: 5px; color: #ffffff; background: #f45cae; }
+	#heartLine{ padding: 0; }
+	#line_path{stroke-dasharray: 500; stroke-dashoffset: 1525; animation: heartLine 3s linear infinite; -webkit-animation: heartLine 3s linear infinite;}
+	.type_words{ padding: 12px 20px; }
+	@keyframes heartLine {
+		form{
+			stroke-dashoffset: 1525;
+		}
+		to{
+			stroke-dashoffset: 0;
+		}
+	}
+	@keyframes breath {
+		0% {
+			transform: scale3d(1,1,1);
+			-webkit-transform: scale3d(1,1,1);
+			transform-origin: 50% 50%;
+		}
+		50%{
+			transform: scale3d(1.02,1.02,1.02);
+			-webkit-transform: scale3d(1.02,1.02,1.02);
+			transform-origin: 50% 50%;
+		}
+		100%{
+			transform: scale3d(1,1,1);
+			-webkit-transform: scale3d(1,1,1);
+			transform-origin: 50% 50%;
+		}
+	}
+</style>
+<script type="text/javascript">
+	$(function() {
+		var w = $('body').innerWidth();
+		var path = $('#heartLine');
+		path.attr('width', w);
+		path.attr('height', 300);
+		$('#yes').click(function(event) {
+			modal('我就知道小姐姐你一定会同意的。');
+		});
+		$('#no').click(function(event) {
+			modal('明日不说暗话！', A);
+		});
+		// typeWrite();
+	});
 
-    </div>
+	function A() {
+		modal('我喜欢你！', B);
+	}
+
+	function B() {
+		modal('我知道你在等我这一句话', C);
+	}
+
+	function C() {
+		modal('请您不要拒绝我', D);
+	}
+
+	function D() {
+		modal('拒绝我，不存在的', E);
+	}
+
+	function E() {
+		modal('这辈子都不可能让你离开我', F);
+	}
+
+	function F() {
+		modal('跟我走吧', G);
+	}
+
+	function G() {
+		modal('行，我们去民政局登记吧', function() {
+
+		});
+	}
+
+	function modal(content, callback) {
+		var tpl = '<div class="container">'+
+								'<div class="mask"></div>'+
+									'<div class="modal">'+
+										'<p>'+ content +'</p>'+
+										'<button type="button" id="confirm" class="confirm">确定</button>'+
+									'</div>'+
+								'</div>';
+		$('body').append(tpl);
+		$(document).on('click', '.confirm', function() {
+			$('.container').remove();
+			callback();
+		});
+	}
+
+	var myWords = '你知道吗，我等了那么久只为等待你的出现。';
+	var x = 0;
+	var speed = 150;
+	var current = 0;
+	function typeWrite(){
+		$('.type_words').html(myWords.substring(0, x++)+'_');
+		var timer = setTimeout("typeWrite()", speed);
+		if (x == myWords.length) {
+			x = myWords.length;
+			clearTimeout(timer)
+		}
+	}
+
+</script>
+<body>
+	<svg id="heartLine" style="background: #326a7e" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+		<path id="line_path" d="M0 120 L20 120 L50 60 L76 120 L98 120 L108 140 L145 10 L187 220 L206 120 L224 120 L245 80 L265 120 L300 120 L316 100 L342 160 L390 30 L430 290 L460 120 L500 120" fill="none" stroke="#fff" stroke-width="1"></path>
+	</svg>
+	<div class="page_one">
+		<div class="content">
+			<p>小姐姐，你原因做我女朋友吗？</p>
+		</div>
+		<div class="btn-groups">
+			<div class="heart-btn">
+				<div id="yes" class="btn btn-a"><span>愿意</span></div>
+			</div>
+			<div id="no" class="btn btn-b"><span>不愿意</span></div>
+		</div>
+	</div>
+	<div class="page_two hide">
+		<div class="type_words"></div>
+	</div>
 </body>
 </html>
