--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
 	<meta content="width=device-width,initial-scale=1.0,maximum-scale=1.0,user-scalable=no" name="viewport">
 	<title>forever love</title>
 </head>
-<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js"></script>
+<script src="https://libs.baidu.com/jquery/2.0.0/jquery.min.js" type="text/javascript"></script>
+<script src="js/lib/jquery.fireworks.js" type="text/javascript"></script>
 <style type="text/css">
 	*{ -webkit-tap-highlight-color:rgba(0,0,0,0); -webkit-box-sizing: border-box; box-sizing: border-box; }
 	html{ width: 100%; height: 100%; }
@@ -64,9 +65,12 @@
 		path.attr('width', w);
 		path.attr('height', 300);
 		$('#yes').click(function(event) {
-			modal('我就知道小姐姐你一定会同意的。', function() {
-				typeWrite();
+			modal('我就知道小姐姐您一定会同意的。(^_^)', function() {
 				$('.page_one').addClass('hide');
+				$('.page_two').removeClass('hide');
+				// typeWrite();
+				fireworks();
+				
 			});
 		});
 		$('#no').click(function(event) {
@@ -99,9 +103,32 @@
 	}
 
 	function G() {
-		modal('行，我们去民政局登记吧', function() {
+		modal('房产证上写你名', H);
+	}
 
+	function H() {
+		modal('我会做饭', I);
+	}
+
+	function I() {
+		modal('爱你。么么哒！', J)
+	}
+
+	function J() {
+		modal('行，我们去民政局登记吧', function() {
+			fireworks();
 		});
+	}
+
+	function fireworks() {
+		$('.page_one').addClass('hide');
+		$('.page_two').removeClass('hide');
+		$('.page_two').fireworks({ 
+		  sound: false, 
+		  opacity: 0.9, 
+		  width: '100%', 
+		  height: '100%' 
+		});	
 	}
 
 	function modal(content, callback) {
@@ -119,7 +146,7 @@
 		});
 	}
 
-	var myWords = '你知道吗，我等了那么久只为等待你的出现。';
+	var myWords = '有人说，人的一生会遇到2920万人，而两个人相爱的概率只有0.000049。在这茫茫人海中，两个人能相遇就值得感激，能相爱更是一种难得。所以，我很庆幸上天让我遇见了你。我希望有个如你一般的人，能看完我写过的所有状态，读完我所有的日志，看完我从小到大的照片，试着听我喜欢的歌。如果可以，甚至陪我去我喜欢的地方，只想弥补错过你的青春。';
 	var x = 0;
 	var speed = 150;
 	var current = 0;
@@ -134,12 +161,12 @@
 
 </script>
 <body>
-	<svg id="heartLine" style="background: #326a7e" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-		<path id="line_path" d="M0 120 L20 120 L50 60 L76 120 L98 120 L108 140 L145 10 L187 220 L206 120 L224 120 L245 80 L265 120 L300 120 L316 100 L342 160 L390 30 L430 290 L460 120 L500 120" fill="none" stroke="#fff" stroke-width="1"></path>
-	</svg>
 	<div class="page_one">
+		<svg id="heartLine" style="background: #326a7e" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
+			<path id="line_path" d="M0 120 L20 120 L50 60 L76 120 L98 120 L108 140 L145 10 L187 220 L206 120 L224 120 L245 80 L265 120 L300 120 L316 100 L342 160 L390 30 L430 290 L460 120 L500 120" fill="none" stroke="#fff" stroke-width="1"></path>
+		</svg>
 		<div class="content">
-			<p>小姐姐，你原因做我女朋友吗？</p>
+			<p>小姐姐，我好喜欢你，你愿意做我女朋友吗？</p>
 		</div>
 		<div class="btn-groups">
 			<div class="heart-btn">
